Einlesen und Abspielen eines Videos inkl. Basis für Segmentierung

--- a/ArbeitProjektZwei/ArbeitProjektZwei/ArbeitProjektZwei.vcxproj.filters
+++ b/ArbeitProjektZwei/ArbeitProjektZwei/ArbeitProjektZwei.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="ArbeitProjektZwei.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Spielwiese.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
