--- a/ArbeitProjektZwei/ArbeitProjektZwei/ArbeitProjektZwei.vcxproj
+++ b/ArbeitProjektZwei/ArbeitProjektZwei/ArbeitProjektZwei.vcxproj
@@ -152,6 +152,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArbeitProjektZwei.cpp" />
+    <ClCompile Include="camera_calibration.cpp" />
+    <ClCompile Include="fov.cpp" />
     <ClCompile Include="Spielwiese.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -159,6 +161,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="yolo.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
